29-10-18-2

Import throws an error if lookup not found


29-10-18

Apache POI libraries added for import optimizeation work (code currently disabled)

Better feedback on the import on whether the database was actually changed or not

File import parameter assumptions now override any value found on file. (for Ed Broking where 'certain underwriters at Lloyds' does not mean the default value (BB007620))

25-10-18

Added 'exclusive' to 'classification' when importing

Bug fix stopped numbers ending in 'F' being recognised as numbers (parseDouble recognises '17F')


24-10-18-4

Bug fix - ZK force formula check on all sheets not just the front one


24-10-18-3

Bug fix on keeping user menus when overwriting databases


24-10-18-2

Brand the audit/debug xlsx file, needs a more configurable solution later


24-10-18

Bug fix on sheet calculations that was causing save problems for Elseco

Further (still hidden) work on pending uploads


23-10-18-2

Changes condition for creating an import template from a worksheet - parameters are allowed on set up files

First successful test of a directory scan moving files and creating records in the database successfully


23-10-18

Shows audit on calculated fields

Started work on pending uploads area (currently hidden to users)

When importing removes the ' mark on excel cells that start ' and have no other '


22-10-18-3

CPU and memory report added, bug fix to keep user menus linked when loading a DB from a backup file


22-10-18-2

ZK optimiseation to put our code in their PostImporter. Should allow inserting of lines faster.

Bug fix when auditing multiple worksheets


22-10-18

Added this file!

Bug fixing resolving choices and queries - was only clearing the formula result cache when a number - clearly wrong!

Improved error messages on importing

User choices ignore az_ so if date set in one place from a dropdown as az_datechoice it will be picked up by datechoice and vice versa
