@@ -30,7 +30,6 @@
           <element id="library" level="project" name="com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.9.2" />
           <element id="library" level="project" name="org.zeroturnaround:zt-zip:1.13" />
           <element id="library" level="project" name="com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.4.3" />
-          <element id="library" level="project" name="javax.xml.bind:jaxb-api:2.3.1" />
         </element>
       </element>
     </root>
