@@ -1,11 +1,0 @@
-<component name="libraryTable">
-  <library name="javax.xml.bind:jaxb-api:2.3.1" type="repository">
-    <properties maven-id="javax.xml.bind:jaxb-api:2.3.1" />
-    <CLASSES>
-      <root url="jar://$PROJECT_DIR$/lib/jaxb-api-2.3.1.jar!/" />
-      <root url="jar://$PROJECT_DIR$/lib/javax.activation-api-1.2.0.jar!/" />
-    </CLASSES>
-    <JAVADOC />
-    <SOURCES />
-  </library>
-</component>
