@@ -50,6 +50,5 @@
     <orderEntry type="library" name="com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.9.2" level="project" />
     <orderEntry type="library" name="org.zeroturnaround:zt-zip:1.13" level="project" />
     <orderEntry type="library" name="com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.4.3" level="project" />
-    <orderEntry type="library" name="javax.xml.bind:jaxb-api:2.3.1" level="project" />
   </component>
 </module>
